fix extra padding for toggle button

--- a/static/main.css
+++ b/static/main.css
@@ -70,7 +70,7 @@ a.item {
 }
 
 #toggle-icon {
-  margin-right: 10px;
+  
 }
 
 .slides {
@@ -145,7 +145,7 @@ a.item {
   }
 
   to {
-    opcity: 1;
+    opacity: 1;
   }
 }
 
